[project]
name = "anxiety-biomarker-classification"
version = "1.0.0"
description = "Anxiety blood biomarker binary classification experiment"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "xgboost>=2.0.0",
    "shap>=0.42.0",
]

[tool.uv]
index-url = "https://mirrors.aliyun.com/pypi/simple/"
